crates/glyph-cli/tests/corpus/invalid/return_of_no_value_call_skill.glyph
block helper()
    description: "Void helper that records progress."
    flow:
        "Record a progress note."

skill demo() -> Marker
    description: "Demo skill that incorrectly returns a void call."
    flow:
        return helper()
